--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <section id="education">
         <div class="section-content">
             <h2>Education</h2>
-            <p>COMPUTER SCIENCE</p>
+            <p>Bsc-COMPUTER SCIENCE</p>
             <p>BHARATHIDHASAN UNIVERSITY</p>
             
             
